refactor account system v2
